--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@sanity/client": "^3.3.0",
         "axios": "^0.27.2",
         "gapi-script": "^1.2.0",
+        "jwt-decode": "^3.1.2",
         "next": "12.1.6",
         "react": "18.1.0",
         "react-dom": "18.1.0",
@@ -29,7 +30,7 @@
         "eslint": "8.16.0",
         "eslint-config-next": "12.1.6",
         "postcss": "^8.4.14",
-        "tailwindcss": "^3.0.24",
+        "tailwindcss": "^3.1.4",
         "typescript": "4.6.4"
     }
 }
